metadata/root/main/default/objects/Opportunity/fields/Opportunityencrypted__c.field-meta.xml
<CustomField>
    <fullName>Opportunityencrypted__c</fullName>
    <label>Opportunityencrypted</label>
    <length>12</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>