metadata/root/main/default/objects/Opportunity/fields/Test_Object__c.field-meta.xml
<CustomField>
    <fullName>Test_Object__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Test_Object</label>
    <referenceTo>Test_Object__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>