metadata/root/main/default/objects/Opportunity/fields/Test_Phone__c.field-meta.xml
<CustomField>
    <fullName>Test_Phone__c</fullName>
    <label>Test_Phone</label>
    <type>Phone</type>
</CustomField>