metadata/root/main/default/objects/Opportunity/validationRules/new1.validationRule-meta.xml
<ValidationRule>
    <fullName>new1</fullName>
    <active>true</active>
    <description>ny</description>
    <errorConditionFormula>Name  =  &apos;q1&apos;</errorConditionFormula>
    <errorMessage>any</errorMessage>
</ValidationRule>