metadata/root/main/default/objects/Opportunity/validationRules/Opportunityvalidationrule.validationRule-meta.xml
<ValidationRule>
    <fullName>Opportunityvalidationrule</fullName>
    <active>true</active>
    <errorConditionFormula>Amount = 1000</errorConditionFormula>
    <errorMessage>dfgds</errorMessage>
</ValidationRule>